@@ -84,6 +84,8 @@ E(OP_InterruptCast)
 E(OP_SendMembership)
 E(OP_Animation)
 E(OP_HPUpdate)
+E(OP_BlockedBuffs)
+E(OP_RemoveBlockedBuffs)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
@@ -132,5 +134,7 @@ D(OP_AltCurrencySell)
 D(OP_ZoneChange)
 D(OP_ZoneEntry)
 D(OP_ShopRequest)
+D(OP_BlockedBuffs)
+D(OP_RemoveBlockedBuffs)
 #undef E
 #undef D
