@@ -299,8 +299,8 @@ OP_SetGroupTarget=0x0000
 OP_Charm=0x7118 
 OP_Stun=0x53c0 
 OP_SendFindableNPCs=0x34c3 
-OP_FindPersonRequest=0x0000 
-OP_FindPersonReply=0x0000 
+OP_FindPersonRequest=0x2f3b
+OP_FindPersonReply=0x44f7
 OP_Sound=0x3cec 
 OP_PetBuffWindow=0x0000 
 OP_LevelAppearance=0x7c4d 
@@ -316,7 +316,7 @@ OP_PVPLeaderBoardRequest=0x0000
 OP_PVPLeaderBoardReply=0x0000 
 OP_PVPLeaderBoardDetailsRequest=0x0000 
 OP_PVPLeaderBoardDetailsReply=0x0000 
-OP_RestState=0x0000 
+OP_RestState=0x3ad5
 OP_RespawnWindow=0x7f99 
 OP_DisciplineTimer=0x0000 
 OP_LDoNButton=0x0000 
